force-app/main/default/objects/SVMXC__Service_Group_Site__c/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <description>Service territory to which this related technician belongs</description>
    <formula>SVMXC__Technician_Equipment__r.SVMXC__Service_Territory__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Territory</label>
    <type>Text</type>
</CustomField>