force-app/main/default/objects/SVMXC__Service_Group_Site__c/fields/SVMXC__Site__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Location covered by the service team. Not used</description>
    <label>Location</label>
    <referenceTo>SVMXC__Site__c</referenceTo>
    <relationshipLabel>Locations Covered</relationshipLabel>
    <relationshipName>Service_Group_Site</relationshipName>
    <type>Lookup</type>
</CustomField>