force-app/main/default/objects/SVMXC__Service_Group_Site__c/fields/SVMXC__Technician_Equipment__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Technician_Equipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the technician whose home base is defined. Reference to an existing Technician record in ServiceMax</description>
    <label>Technician/Equipment</label>
    <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
    <relationshipLabel>Locations Covered</relationshipLabel>
    <relationshipName>Service_Group_Site</relationshipName>
    <type>Lookup</type>
</CustomField>