force-app/main/default/objects/SVMXC__Service_Group_Site__c/fields/SVMXC__Working_Hours__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Working_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Working hours applicable to the technician when this home base is used. Reference to an existing Business Hours record in Salesforce</description>
    <label>Working Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipLabel>Locations Covered (Working Hours)</relationshipLabel>
    <relationshipName>Service_Group_Site1</relationshipName>
    <type>Lookup</type>
</CustomField>