force-app/main/default/objects/SVMXC__Service_Group_Site__c/recordTypes/SVMXC__Home_Bases.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Home_Bases</fullName>
    <active>true</active>
    <description>Home Bases</description>
    <label>Home Bases</label>
</RecordType>