force-app/main/default/objects/SVMXC__Service_Group_Site__c/recordTypes/SVMXC__Locations.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Locations</fullName>
    <active>true</active>
    <description>Locations</description>
    <label>Locations</label>
</RecordType>